@@ -234,7 +234,7 @@ public class MetadataValidation implements MetadataValidationInterface {
 
         KeySetView<PhysicalDivision, ?> unassignedPhysicalDivisions = ConcurrentHashMap.newKeySet();
         unassignedPhysicalDivisions.addAll(Workpiece.treeStream(workpiece.getPhysicalStructure())
-                .filter(physicalDivision -> !physicalDivision.getMediaFiles().isEmpty()).collect(Collectors.toList()));
+                .filter(physicalDivision -> !physicalDivision.getMediaFiles().isEmpty()).toList());
         Workpiece.treeStream(workpiece.getLogicalStructure()).flatMap(structure -> structure.getViews().stream())
                 .map(View::getPhysicalDivision)
                 .forEach(unassignedPhysicalDivisions::remove);
@@ -286,7 +286,7 @@ public class MetadataValidation implements MetadataValidationInterface {
                 error = true;
             } else if (count > max) {
                 messages.add(MessageFormat.format(translations.get(MESSAGE_VALUE_TOO_OFTEN),
-                    location.concat(metadataView.getLabel()), Integer.toString(count), Integer.toString(min)));
+                    location.concat(metadataView.getLabel()), Integer.toString(count), Integer.toString(max)));
                 error = true;
             }
 
@@ -390,7 +390,7 @@ public class MetadataValidation implements MetadataValidationInterface {
      * @return a new METS XML element access
      */
     private static MetsXmlElementAccessInterface createMetsXmlElementAccess() {
-        return new KitodoServiceLoader<MetsXmlElementAccessInterface>(MetsXmlElementAccessInterface.class).loadModule();
+        return new KitodoServiceLoader<>(MetsXmlElementAccessInterface.class).loadModule();
     }
 
     /**
@@ -399,7 +399,7 @@ public class MetadataValidation implements MetadataValidationInterface {
      * @return a file management
      */
     private static FileManagementInterface getFileManagement() {
-        return new KitodoServiceLoader<FileManagementInterface>(FileManagementInterface.class).loadModule();
+        return new KitodoServiceLoader<>(FileManagementInterface.class).loadModule();
     }
 
     /**
@@ -408,7 +408,7 @@ public class MetadataValidation implements MetadataValidationInterface {
      * @return a ruleset management
      */
     private static RulesetManagementInterface getRulesetManagement() {
-        return new KitodoServiceLoader<RulesetManagementInterface>(RulesetManagementInterface.class).loadModule();
+        return new KitodoServiceLoader<>(RulesetManagementInterface.class).loadModule();
     }
 
     /**
@@ -424,13 +424,20 @@ public class MetadataValidation implements MetadataValidationInterface {
     private static Map<MetadataViewInterface, Collection<Metadata>> squash(
             List<MetadataViewWithValuesInterface> metadataViewsWithValues) {
         Map<MetadataViewInterface, Collection<Metadata>> squashed = new HashMap<>();
+        Map<String, MetadataViewInterface> idMap = new HashMap<>();
         for (MetadataViewWithValuesInterface metadataViewWithValues : metadataViewsWithValues) {
             Optional<MetadataViewInterface> optionalMetadataView = metadataViewWithValues.getMetadata();
             if (optionalMetadataView.isEmpty()) {
                 continue;
             }
-            squashed.computeIfAbsent(optionalMetadataView.get(), each -> new ArrayList<>());
-            squashed.get(optionalMetadataView.get()).addAll(metadataViewWithValues.getValues());
+            MetadataViewInterface view = optionalMetadataView.get();
+            String id = view.getId();
+            //Choose a stable representative view
+            MetadataViewInterface representative =
+                    idMap.computeIfAbsent(id, k -> view);
+            //merge ALL values into the representative’s list
+            squashed.computeIfAbsent(representative, x -> new ArrayList<>())
+                    .addAll(metadataViewWithValues.getValues());
         }
         return squashed;
     }
