@@ -191,7 +191,7 @@ public class MassImportService {
      * @throws RuntimeException if any index in skipIndices is greater than the number of columns in the first record
      */
     public List<CsvRecord> discardEmptyColumns(List<CsvRecord> csvRecords, List<Integer> skipIndices) {
-        if (!csvRecords.isEmpty() && Collections.max(skipIndices) > csvRecords.get(0).getCsvCells().size()) {
+        if (!csvRecords.isEmpty() && Collections.max(skipIndices) > csvRecords.getFirst().getCsvCells().size()) {
             throw new RuntimeException(Helper.getTranslation("massImport.csvCellMismatch"));
         }
         // iterate over "skipIndices" in reverse order to preserve column indices in "metadataKeys" list
@@ -256,7 +256,7 @@ public class MassImportService {
             List<MetadataViewInterface> metadataView =
                     divisions.get(i).getAddableMetadata(enteredMetadata, Collections.emptyList())
                             .stream().sorted(Comparator.comparing(MetadataViewInterface::getLabel))
-                            .collect(Collectors.toList());
+                            .toList();
             if (i == 0) {
                 commonMetadata = new ArrayList<>(List.copyOf(metadataView));
             } else {
@@ -357,7 +357,7 @@ public class MassImportService {
         } else {
             for (String metadataKey : metadataKeys) {
                 if (ServiceManager.getImportService().isRecordIdentifierMetadata(ruleset, metadataKey)) {
-                    return ServiceManager.getImportService().getMetadataTranslation(ruleset, metadataKey, null);
+                    return ServiceManager.getRulesetService().getMetadataTranslation(ruleset, metadataKey, null);
                 }
             }
         }
