@@ -30,10 +30,11 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import javax.faces.model.SelectItem;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.TransformerException;
 import javax.xml.xpath.XPathExpressionException;
+
+import jakarta.faces.model.SelectItem;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -54,12 +55,15 @@ import org.kitodo.api.dataformat.MediaVariant;
 import org.kitodo.api.dataformat.PhysicalDivision;
 import org.kitodo.api.dataformat.View;
 import org.kitodo.api.dataformat.Workpiece;
+import org.kitodo.api.dataformat.mets.LinkedMetsResource;
 import org.kitodo.api.externaldatamanagement.ImportConfigurationType;
 import org.kitodo.config.ConfigCore;
 import org.kitodo.config.enums.ParameterCore;
 import org.kitodo.data.database.beans.ImportConfiguration;
 import org.kitodo.data.database.beans.Process;
 import org.kitodo.data.database.beans.Ruleset;
+import org.kitodo.data.database.exceptions.DAOException;
+import org.kitodo.exceptions.FileStructureValidationException;
 import org.kitodo.exceptions.InvalidMetadataValueException;
 import org.kitodo.exceptions.MetadataException;
 import org.kitodo.exceptions.NoRecordFoundException;
@@ -131,7 +135,7 @@ public class DataEditorService {
                     .filter(currentMetadata -> Objects.equals(currentMetadata.getKey(), metadataKey))
                     .filter(MetadataGroup.class::isInstance).map(MetadataGroup.class::cast)
                     .flatMap(metadataGroup -> metadataGroup.getMetadata().stream())
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return metadata.stream()
                 .filter(currentMetadata -> Objects.equals(currentMetadata.getKey(), metadataPath[lastIndex]))
@@ -149,7 +153,7 @@ public class DataEditorService {
      * @param metadataNode TreeNode containing MetadataGroup to check
      * @return List of select items representing addable metadata types
      */
-    public static List<SelectItem> getAddableMetadataForGroup(Ruleset ruleset, TreeNode metadataNode) {
+    public static List<SelectItem> getAddableMetadataForGroup(Ruleset ruleset, TreeNode<Object> metadataNode) {
         ProcessFieldedMetadata fieldedMetadata = ((ProcessFieldedMetadata) metadataNode.getData());
         ComplexMetadataViewInterface metadataView = fieldedMetadata.getMetadataView();
         List<SelectItem> addableMetadata = new ArrayList<>();
@@ -176,7 +180,7 @@ public class DataEditorService {
      */
     public static List<SelectItem> getAddableMetadataForStructureElement(DataEditorForm dataEditor,
                                                                          boolean currentElement,
-                                                                         List<TreeNode> metadataNodes,
+                                                                         List<TreeNode<Object>> metadataNodes,
                                                                          String structureType,
                                                                          boolean isLogicalStructure) {
         List<SelectItem> addableMetadata = new ArrayList<>();
@@ -286,10 +290,11 @@ public class DataEditorService {
      * @param metadataTreeNodes as a List of TreeNode
      * @return the existing metadata
      */
-    public static Collection<Metadata> getExistingMetadataRows(List<TreeNode> metadataTreeNodes) throws InvalidMetadataValueException {
+    public static Collection<Metadata> getExistingMetadataRows(List<TreeNode<Object>> metadataTreeNodes)
+            throws InvalidMetadataValueException {
         Collection<Metadata> existingMetadataRows = new ArrayList<>();
 
-        for (TreeNode metadataNode : metadataTreeNodes) {
+        for (TreeNode<Object> metadataNode : metadataTreeNodes) {
             if (metadataNode.getData() instanceof ProcessDetail) {
                 try {
                     existingMetadataRows.addAll(((ProcessDetail) metadataNode.getData()).getMetadata(false));
@@ -342,8 +347,8 @@ public class DataEditorService {
      *         The media files to compare too
      * @return View or null
      */
-    public static View getViewOfBaseMediaByMediaFiles(List<TreeNode> treeNodes, Map<MediaVariant, URI> mediaFiles) {
-        for (TreeNode treeNode : treeNodes) {
+    public static View getViewOfBaseMediaByMediaFiles(List<TreeNode<Object>> treeNodes, Map<MediaVariant, URI> mediaFiles) {
+        for (TreeNode<Object> treeNode : treeNodes) {
             if (StructurePanel.VIEW_NODE_TYPE.equals(
                     treeNode.getType()) && treeNode.getData() instanceof StructureTreeNode) {
                 StructureTreeNode structureMediaTreeNode = (StructureTreeNode) treeNode.getData();
@@ -389,18 +394,49 @@ public class DataEditorService {
     /**
      * Re-imports catalog metadata of given process and return list of resulting metadata comparison that are displayed
      * to the user.
-     * @param process Process for which metadata update is performed
-     * @param workpiece Workpiece of given process
-     * @param oldMetadataSet Set containing old metadata
-     * @return list of metadata comparisons
+     *
+     * @param process
+     *          Process for which metadata update is performed
+     * @param workpiece
+     *          Workpiece of given process
+     * @param oldMetadataSet
+     *          Set containing old metadata
+     * @param validateXml
+     *          whether to validate XML or not
+     * @return
+     *          list of metadata comparisons
+     * @throws IOException
+     *          when opening process' ruleset fails
+     * @throws UnsupportedFormatException
+     *          when external data record of temp process contains data in unsupported format
+     * @throws XPathExpressionException
+     *          when error message XPath in ImportConfiguration has syntax errors
+     * @throws NoRecordFoundException
+     *          when no record with given ID 'recordID' could be found
+     * @throws ProcessGenerationException
+     *          when imported temp process is null
+     * @throws ParserConfigurationException
+     *          when parsing import XML document fails
+     * @throws URISyntaxException
+     *          when loading MappingFiles from ImportConfiguration fails
+     * @throws TransformerException
+     *          when when loading document in internal format fails
+     * @throws InvalidMetadataValueException
+     *          when generating atstsl fields fails
+     * @throws NoSuchMetadataFieldException
+     *          when generating atstsl fields fails
+     * @throws SAXException
+     *          when parsing import XML document fails
+     * @throws FileStructureValidationException
+     *          when XML validation of imported data record fails
      */
     public static List<MetadataComparison> reimportCatalogMetadata(Process process, Workpiece workpiece,
                                                                    HashSet<Metadata> oldMetadataSet,
                                                                    List<Locale.LanguageRange> languages,
-                                                                   String selectedDivisionType)
+                                                                   String selectedDivisionType, boolean validateXml)
             throws IOException, UnsupportedFormatException, XPathExpressionException, NoRecordFoundException,
-            ProcessGenerationException, ParserConfigurationException, URISyntaxException, InvalidMetadataValueException,
-            TransformerException, NoSuchMetadataFieldException, SAXException {
+            ProcessGenerationException, ParserConfigurationException, URISyntaxException, TransformerException,
+            InvalidMetadataValueException, NoSuchMetadataFieldException, SAXException, FileStructureValidationException {
         String recordID = getRecordIdentifierValueOfProcess(process, workpiece);
         ImportConfiguration importConfig = process.getImportConfiguration();
         if (Objects.isNull(recordID) || Objects.isNull(importConfig)) {
@@ -409,7 +445,7 @@ public class DataEditorService {
             throw new MetadataException(errorMessage, null);
         }
         TempProcess updatedProcess = ServiceManager.getImportService().importTempProcess(importConfig, recordID,
-                process.getTemplate().getId(), process.getProject().getId());
+                process.getTemplate().getId(), process.getProject().getId(), validateXml);
         if (Objects.isNull(updatedProcess)) {
             throw new ProcessGenerationException("Unable to re-import data record for metadata update");
         } else {
@@ -521,7 +557,7 @@ public class DataEditorService {
         } else if (metadata instanceof MetadataGroup) {
             StringBuilder groupString = new StringBuilder();
             for (Metadata groupMetadata : ((MetadataGroup) metadata).getMetadata().stream()
-                    .sorted(Comparator.comparing(Metadata::getKey)).collect(Collectors.toList())) {
+                    .sorted(Comparator.comparing(Metadata::getKey)).toList()) {
                 if (groupMetadata instanceof MetadataEntry) {
                     groupString.append(((MetadataEntry) groupMetadata).getValue());
                 } else {
@@ -543,6 +579,7 @@ public class DataEditorService {
      */
     public static void updateMetadataWithNewValues(LogicalDivision logicalDivision, List<MetadataComparison> comparisons) {
         for (MetadataComparison comparison : comparisons) {
+            stripEmptyGroupFields(comparison.getOldValues());
             switch (comparison.getSelection()) {
                 case ADD:
                     // extend existing values with new values
@@ -558,5 +595,66 @@ public class DataEditorService {
                     logger.info("Keep existing values for metadata {}", comparison.getMetadataKey());
             }
         }
+    }
+
+    private static void stripEmptyGroupFields(HashSet<Metadata> values) {
+        for (Metadata md : values) {
+            if (md instanceof MetadataGroup group) {
+                group.getMetadata().removeIf(child ->
+                        child instanceof MetadataEntry entry
+                                && Objects.nonNull(entry.getValue())
+                                && entry.getValue().isBlank()
+                );
+            }
+        }
+    }
+
+    /**
+     * Return the ID of linked process represented by the given logical division. Returns null if given logical division
+     * does not represent a linked process.
+     *
+     * @param logicalDivision logical division potentially representing a linked process
+     * @return ID of linked process
+     * @throws DAOException if linked process cannot be loaded from database
+     */
+    public Integer getLinkedProcessId(LogicalDivision logicalDivision) throws DAOException {
+        LinkedMetsResource resource = logicalDivision.getLink();
+        if (Objects.nonNull(resource)) {
+            return ServiceManager.getProcessService().processIdFromUri(resource.getUri());
+        }
+        return null;
+    }
+
+    /**
+     * Checks whether conditions are met for displaying the context menu option to link another process as a
+     * subordinate process.
+     * The conditions are:
+     * - no media is selected
+     * - exactly one logical node is selected
+     * - selected logical node does not already represent a linked process
+     * - Logical structure represented by the selected node has allowed substructures that are defined as document types
+     *   in the current ruleset
+     * @param dataEditor DataEditorForm instance used to determine conditions
+     * @param treeNode TreeNode representing the selected structure
+     * @return whether the option to link a process is displayed
+     */
+    public boolean linkingProcessPossible(DataEditorForm dataEditor, TreeNode<?> treeNode) {
+        List<?> selectedMedia = dataEditor.getSelectedMedia();
+        if (Objects.nonNull(treeNode) && selectedMedia.isEmpty()) {
+            Object data = treeNode.getData();
+            if (data instanceof StructureTreeNode structureTreeNode) {
+                if (structureTreeNode.getDataObject() instanceof LogicalDivision logicalDivision) {
+                    RulesetManagementInterface ruleset = dataEditor.getRulesetManagement();
+                    List<Locale.LanguageRange> locales = dataEditor.getPriorityList();
+                    Map<String, String> documentTypes = ruleset.getStructuralElements(locales);
+                    StructuralElementViewInterface structureElement = ruleset.getStructuralElementView(logicalDivision.getType(),
+                            dataEditor.getAcquisitionStage(), locales);
+                    Map<String, String> allowedSubstructures = structureElement.getAllowedSubstructuralElements();
+                    allowedSubstructures.keySet().retainAll(documentTypes.keySet());
+                    return !structureTreeNode.isLinked() && !allowedSubstructures.isEmpty();
+                }
+            }
+        }
+        return false;
     }
 }
