@@ -91,7 +91,7 @@ public class TitleRecordLinkTabIT {
 
         assertEquals(1, testedTitleRecordLinkTab.getPossibleParentProcesses().size(),
             "Wrong number of possibleParentProcesses found!");
-        assertEquals("4", testedTitleRecordLinkTab.getPossibleParentProcesses().get(0).getValue(),
+        assertEquals("4", testedTitleRecordLinkTab.getPossibleParentProcesses().getFirst().getValue(),
             "Wrong possibleParentProcesses found!");
     }
 
@@ -103,18 +103,20 @@ public class TitleRecordLinkTabIT {
     @Test
     public void shouldPreventLinkingToParentProcessOfUnassignedProject() throws DAOException {
         Project firstProject = ServiceManager.getProjectService().getById(1);
-        SecurityUserDetails user = ServiceManager.getUserService().getAuthenticatedUser();
+        User user = ServiceManager.getUserService().getCurrentUser();
         user.getProjects().remove(firstProject);
+        ServiceManager.getUserService().save(user);
 
         TitleRecordLinkTab testedTitleRecordLinkTab = searchForHierarchyParent();
 
         assertEquals(1, testedTitleRecordLinkTab.getPossibleParentProcesses().size(),
             "Wrong number of potential parent processes found!");
-        assertTrue(testedTitleRecordLinkTab.getPossibleParentProcesses().get(0).isDisabled(),
+        assertTrue(testedTitleRecordLinkTab.getPossibleParentProcesses().getFirst().isDisabled(),
             "Process of unassigned project should be deactivated in TitleRecordLinkTab!");
 
         // re-add first project to user
         user.getProjects().add(firstProject);
+        ServiceManager.getUserService().save(user);
     }
 
     private TitleRecordLinkTab searchForHierarchyParent() throws DAOException {
