@@ -93,7 +93,7 @@ public class MetadataEditorIT {
 
         MetadataEditor.addLink(ServiceManager.getProcessService().getById(parentId), "0", childId);
 
-        assertTrue(isInternalMetsLink(FileUtils.readLines(metaXmlFile, StandardCharsets.UTF_8).get(36), childId), "The link was not added correctly!");
+        assertTrue(isInternalMetsLink(FileUtils.readLines(metaXmlFile, StandardCharsets.UTF_8).get(38), childId), "The link was not added correctly!");
 
         FileUtils.writeLines(metaXmlFile, StandardCharsets.UTF_8.toString(), metaXmlContentBefore);
         FileUtils.deleteQuietly(new File(METADATA_BASE_DIR + parentId + "/meta.xml.1"));
@@ -145,8 +145,8 @@ public class MetadataEditorIT {
         List<Metadata> metadataListOne = new ArrayList<>(newSectionOne.getMetadata());
         LogicalDivision newSectionTwo = workpiece.getAllLogicalDivisions().get(newNrDivisions - 1);
         List<Metadata> metadataListTwo = new ArrayList<>(newSectionTwo.getMetadata());
-        Metadata metadatumOne = metadataListOne.get(0);
-        Metadata metadatumTwo = metadataListTwo.get(0);
+        Metadata metadatumOne = metadataListOne.getFirst();
+        Metadata metadatumTwo = metadataListTwo.getFirst();
 
         assertInstanceOf(MetadataEntry.class, metadatumOne, "Metadata should be of type MetadataEntry");
         assertTrue(((MetadataEntry) metadatumOne).getValue().equals("value 1")
@@ -180,8 +180,8 @@ public class MetadataEditorIT {
         List<Metadata> metadataListOne = new ArrayList<>(newSectionOne.getMetadata());
         LogicalDivision newSectionTwo = workpiece.getAllLogicalDivisions().get(newNrDivisions - 1);
         List<Metadata> metadataListTwo = new ArrayList<>(newSectionTwo.getMetadata());
-        Metadata metadatumOne = metadataListOne.get(0);
-        Metadata metadatumTwo = metadataListTwo.get(0);
+        Metadata metadatumOne = metadataListOne.getFirst();
+        Metadata metadatumTwo = metadataListTwo.getFirst();
 
         assertTrue(metadatumOne instanceof MetadataGroup && metadatumTwo instanceof MetadataGroup, "Metadata should be of type MetadataGroup");
         assertTrue(metadatumOne.getKey().equals("Person") && metadatumTwo.getKey().equals("Person"), "Metadata value was incorrectly added");
