@@ -34,6 +34,8 @@ import org.kitodo.selenium.testframework.pages.RulesetEditPage;
 import org.kitodo.selenium.testframework.pages.TemplateEditPage;
 import org.kitodo.selenium.testframework.pages.UsersPage;
 import org.kitodo.selenium.testframework.pages.WorkflowEditPage;
+import org.openqa.selenium.By;
+import org.openqa.selenium.WebElement;
 
 public class EditingST extends BaseTestSelenium {
 
@@ -80,7 +82,8 @@ public class EditingST extends BaseTestSelenium {
         await().untilAsserted(() -> assertEquals(1, ServiceManager.getBatchService().getByQuery("FROM Batch WHERE title = 'SeleniumBatch'").size(), "Batch was not renamed!"));
 
         assertEquals(1, ServiceManager.getBatchService()
-                .getByQuery("FROM Batch WHERE title = 'SeleniumBatch'").get(0).getProcesses().size(), "Process was not removed from batch");
+                .getByQuery("FROM Batch WHERE title = 'SeleniumBatch'").getFirst().getProcesses().size(),
+                "Process was not removed from batch");
     }
 
     @Test
@@ -145,6 +148,13 @@ public class EditingST extends BaseTestSelenium {
     @Test
     public void editRulesetTest() throws Exception {
         RulesetEditPage rulesetEditPage = projectsPage.editRuleset();
+        List<WebElement> functionalMetadataLists = Browser.getDriver().findElements(By.className("functional-metadata-list"));
+        assertEquals(10, functionalMetadataLists.size(), "Wrong number of functional metadata lists");
+        assertEquals("HauptTitel",  functionalMetadataLists.get(6)
+                .findElement(By.tagName("tbody"))
+                .findElement(By.tagName("tr"))
+                .findElement(By.tagName("td"))
+                .findElement(By.tagName("span")).getText());
         assertEquals("Regelsatz bearbeiten (SLUBDD)", rulesetEditPage.getHeaderText(), "Header for edit ruleset is incorrect");
         rulesetEditPage.changeRuleset().save();
         assertTrue(projectsPage.isAt(), "Redirection after save was not successful");
