@@ -76,7 +76,7 @@ public class ImportConfigurationEditPage extends EditPage<ImportConfigurationEdi
     private WebElement mappingFiles;
 
     public ImportConfigurationEditPage() {
-        super("importConfigurationEdit.jsf");
+        super("importConfigurationEdit");
     }
 
     @Override
@@ -122,13 +122,35 @@ public class ImportConfigurationEditPage extends EditPage<ImportConfigurationEdi
         assignMappingFile();
     }
 
-    public void save() throws InstantiationException, IllegalAccessException {
+    /**
+     * Create a new import configuration with file upload.
+     */
+    public void insertFileUploadImportConfiguration() {
+        titleInput.sendKeys("File upload configuration");
+        selectFileUpload();
+    }
+
+    public void save() throws ReflectiveOperationException {
         clickButtonAndWaitForRedirect(saveButton, Pages.getProjectsPage().getUrl());
     }
 
     private void selectCatalogSearch() {
         clickElement(configurationTypeMenu.findElement(By.cssSelector(CSS_SELECTOR_DROPDOWN_TRIGGER)));
         clickElement(Browser.getDriver().findElement(By.id(configurationTypeMenu.getAttribute("id") + "_1")));
+    }
+
+    private void selectFileUpload() {
+        clickElement(configurationTypeMenu.findElement(By.cssSelector(CSS_SELECTOR_DROPDOWN_TRIGGER)));
+        clickElement(Browser.getDriver().findElement(By.id(configurationTypeMenu.getAttribute("id") + "_2")));
+    }
+
+    /**
+     * Returns the currently selected upload metadata format.
+     *
+     * @return currently selected upload metadata format as String
+     */
+    public String getUploadMetadataFormat() {
+        return Browser.getDriver().findElement(By.id("editForm:importConfigurationTabView:uploadMetadataFormat")).getText();
     }
 
     private void selectCustomInterfaceType() {
@@ -155,7 +177,7 @@ public class ImportConfigurationEditPage extends EditPage<ImportConfigurationEdi
                 .atMost(3, TimeUnit.SECONDS)
                 .until(() -> mappingFiles.isDisplayed());
         WebElement sourcePickList = Browser.getDriver().findElement(By.className("ui-picklist-source"));
-        sourcePickList.findElements(By.cssSelector("li.ui-picklist-item")).get(0).click();
+        sourcePickList.findElements(By.cssSelector("li.ui-picklist-item")).getFirst().click();
         WebElement addMappingFileButton = Browser.getDriver().findElement(By.className("ui-picklist-button-add"));
         addMappingFileButton.click();
         await().ignoreExceptions()
