@@ -15,6 +15,7 @@ import static org.awaitility.Awaitility.await;
 import static org.kitodo.selenium.testframework.Browser.getRowsOfTable;
 
 import java.io.File;
+import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
@@ -22,8 +23,8 @@ import java.util.function.Predicate;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.kitodo.selenium.testframework.Browser;
-import org.kitodo.selenium.testframework.Pages;
 import org.openqa.selenium.By;
+import org.openqa.selenium.Keys;
 import org.openqa.selenium.NotFoundException;
 import org.openqa.selenium.TimeoutException;
 import org.openqa.selenium.WebElement;
@@ -37,40 +38,41 @@ public abstract class Page<T> {
     static final String DATA = "_data";
     static final String CSS_SELECTOR_DROPDOWN_TRIGGER =  ".ui-selectonemenu-trigger";
     static final String WAIT_FOR_FILTER_FORM_MENU = "Wait for filter form menu to open";
+    static final String UNUSED = "unused";
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(id = "user-menu")
     private WebElement userMenuButton;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(className = "ui-growl-item-container")
     private WebElement errorPopup;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(className = "ui-messages-error-summary")
     private WebElement errorMessage;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(id = "yesButton")
     private WebElement confirmRemoveButton;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(id = "noButton")
     WebElement cancelRemoveButton;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(id = "headerText")
     private WebElement header;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(id = "search-form:search-field")
     private WebElement searchField;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(id = "search-form:search")
     private WebElement searchButton;
 
-    @SuppressWarnings("unused")
+    @SuppressWarnings(UNUSED)
     @FindBy(id = "portal-header")
     private WebElement pageHeader;
 
@@ -105,7 +107,7 @@ public abstract class Page<T> {
             return false;
         } else {
             if (recordTitles.size() == 1) {
-                return !recordTitles.get(0).equals("No records found.");
+                return !recordTitles.getFirst().equals("No records found.");
             } else {
                 return true;
             }
@@ -193,7 +195,7 @@ public abstract class Page<T> {
      *            the url to which is redirected after click
      */
     protected void clickButtonAndWaitForRedirect(WebElement button, String url) {
-        WebDriverWait webDriverWait = new WebDriverWait(Browser.getDriver(), 60);
+        WebDriverWait webDriverWait = new WebDriverWait(Browser.getDriver(), Duration.ofSeconds(60));
         for (int attempt = 1; attempt < 4; attempt++) {
             try {
                 await("Wait for button clicked").pollDelay(700, TimeUnit.MILLISECONDS).atMost(10, TimeUnit.SECONDS)
@@ -263,15 +265,16 @@ public abstract class Page<T> {
         }
         switchToTabByIndex(tabIndex, tabView);
         Browser.getDriver()
-                .findElement(By.xpath("//a[@href='/kitodo/pages/" + objectType.toLowerCase() + "Edit.jsf?id="
-                        + removableID + "']/following-sibling::a[@id[contains(., 'delete" + objectType + "')]]"))
+                .findElement(By.xpath("//a[contains(@href, '/kitodo/pages/" + objectType.toLowerCase() + "Edit') and "
+                        + "contains(@href, 'id=" + removableID + "')]" 
+                        + "/following-sibling::a[@id[contains(., 'delete" + objectType + "')]]"))
                 .click();
         await("Wait for 'confirm delete' dialog to be displayed")
                 .atMost(Browser.getDelayAfterDelete(), TimeUnit.MILLISECONDS).ignoreExceptions()
                 .until(() -> confirmRemoveButton.isDisplayed());
         confirmRemoveButton.click();
         Thread.sleep(Browser.getDelayAfterDelete());
-        WebDriverWait wait = new WebDriverWait(Browser.getDriver(), 60);
+        WebDriverWait wait = new WebDriverWait(Browser.getDriver(), Duration.ofSeconds(60));
         wait.until(ExpectedConditions.urlContains(getUrl()));
     }
 
@@ -283,6 +286,6 @@ public abstract class Page<T> {
     public void searchInSearchField(String query) throws Exception {
         searchField.clear();
         searchField.sendKeys(query);
-        clickButtonAndWaitForRedirect(searchButton, Pages.getProcessesPage().getUrl());
+        searchField.sendKeys(Keys.ENTER);
     }
 }
